--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -77,6 +77,7 @@ input::-webkit-credentials-auto-fill-button {
   }
 }
 
+/* While this is cool, it has problems when the children have backgrounds of their own */
 .scroll-shadows {
   -webkit-overflow-scrolling: touch;
   overflow-scrolling: touch;
